tests/interpreter/binary-expression-modulo-bad-types.stderr
error: cannot divide 'Number' by 'String'
 --> $DIR/binary-expression-modulo-bad-types.lox:1:1
  |
1 | 10 % "foo";
  | ^^^^^^^^^^
